More mechanics, game end and interface

--- a/4.prototype/4.0.prototype.tex
+++ b/4.prototype/4.0.prototype.tex
@@ -7,3 +7,4 @@ Für den praktischen Anteil dieser Arbeit wird auf Grundlage der gewonnenen Erke
 \input{4.prototype/4.5.gameplay.tex}
 \input{4.prototype/4.6.spielende.tex}
 \input{4.prototype/4.7.mechaniken.tex}
+\input{4.prototype/4.8.interface.tex}
