--- a/4.prototype/4.6.spielende.tex
+++ b/4.prototype/4.6.spielende.tex
@@ -1,3 +1,2 @@
 \subsection{Spielende}
-VIELLEICHT PUNKTESYSTEM ODER ANZAHL BIENEN? ANZAHL SCHWÄRMEN ODER ANZAHL ÜBERLEBTER JAHRE?
-
+Analog zu \textit{SimCity 2000} gibt es kein direkt vordefiniertes Ende. Der Endzustand des Game Over wird jedoch erreicht, wenn keine Königin mehr verfügbar ist, um die Kolonie zu leiten. Das Spiel ist also theoretisch unendlich lange spielbar, sollte jedoch von der Schwierigkeit so gesteigert werden, dass ein natürliches Ende nach einiger Zeit eintritt.
