--- a/notes.tex
+++ b/notes.tex
@@ -33,7 +33,9 @@ Wo unterscheiden sich Resource Management Games von anderen spielen
     \item Magic: The Gathering
     \item Siedler von Catan
     \item Alle Klassiker mit den neusten Version vergleichen
-    \item 
+    \item $\mathbf{Prioritäten für Hypothesen}$
+    \item Bei Sterben der Königin kein direktes GameOver sondern weitere Chancen
+    \item Mehr auf Entwicklungsprozess eingehen, ursprüngliche Idee und wieso überarbeitet.
 \end{itemize}
 
 \subsection*{Fremdwörter}
