--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -434,4 +434,13 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={http://www-cs-students.stanford.edu/~amitp/game-programming/grids/},
   urldate={2022-08-21},
 }
-
+@online{world:tutorial,
+  title={Catlike Coding Hex Map Tutorial},
+  url={https://catlikecoding.com/unity/tutorials/hex-map/},
+  urldate={2022-09-14},
+}
+@online{asset:namegenerator,
+  title={Random Generator - Itay Sagui},
+  url={https://assetstore.unity.com/packages/tools/input-management/random-generator-118768},
+  urldate={2022-09-15},
+}
