--- a/4.prototype/4.3.spielwelt.tex
+++ b/4.prototype/4.3.spielwelt.tex
@@ -1,10 +1,10 @@
 \subsection{Spielwelt}
-Für die Welt, in welcher das Spiel gespielt wird, stehen mehrere Optionen zur Verfügung.
+Die grundlegende Idee der Spielwelt ist, dass diese in zwei Instanzen geteilt wird. Die erste Instanz stellt die Oberwelt dar, wo Pflanzen und Bäume wachsen, wobei die zweite Instanz den Innenraum des Bienenstocks darstellt. In dem Bienenstock können Strukturen gebaut werden, welche in der Außenwelt nicht verfügbar sind. In der Außenwelt hingegen finden sich die Ressourcen, welche für das Fortleben essenziell sind. Für die gesamte Welt, in welcher das Spiel gespielt wird, stehen mehrere Optionen der Erstellung zur Verfügung.
 
-\subsubsection{Gridless}
+\paragraph{Gridless}
 Die erste Möglichkeit einer Spielwelt ist eine Karte ohne dargestelltes oder vorhandenes Grid. Solch ein System verwendet beispielsweise \textit{Age of Mythology}, wobei die Karte nicht in ein Grid, sondern viele tausende  Koordinaten eingeteilt ist. Diese Form der Positionierung ist daher gängig für \textit{Real Time Strategy} Spiele.
 
-\subsubsection{Square Grid}
+\paragraph{Square Grid}
 Eine weitere Möglichkeit zur Positionierung von Gebäuden oder Einheiten innerhalb einer Spielwelt ist ein \textit{Square Grid} (vgl. \autoref{image:squaregrid}), also die Einteilung der Karte in eine gewisse Anzahl von Quadraten, welche als eigene Felder agieren und worauf Gebäude oder Einheiten zugreifen können. Dieses System wird unter anderem in \textit{Starcraft II} oder \textit{Age of Empires} verwendet, wodurch auch diese Form der Positionierung gängig für \textit{Real Time Strategy} ist. Allerdings findet man diese Eigenschaft auch in \textit{Turn Based Strategy}, darunter die älteren Teile der \textit{Civilization}-Reihe. Dieses System wurde im Laufe der Jahre jedoch von einem Square Grid auf ein Hex Grid umgestellt.
 
 \begin{figure}
@@ -14,7 +14,7 @@ Eine weitere Möglichkeit zur Positionierung von Gebäuden oder Einheiten innerh
     \caption{Aufbau eines Square Grids (\cite{world:grids})} \label{image:squaregrid}
 \end{figure}
 
-\subsubsection{Hex Grid}
+\paragraph{Hex Grid}
 Die letzte Möglichkeit ist ein \textit{Hex Grid}, welches vor allem Anklang findet im Genre der \textit{Turn Based Strategy} Games, darunter \textit{Endless Legend}, \textit{Civilization VI} und \textit{Humankind}. Der klare Vorteil von einem Grid bestehend aus Hexagonen ist die \textit{Distanzberechnung} und die Anzahl \textit{direkter Nachbarn}. Im Vergleich zu einem Quadrat besitzt ein Hexagon in einem Grid 6 statt 4 direkter Nachbarn, wobei direkt bedeutet, dass die Kanten aneinander angrenzen. Um einen diagonalen Weg in einem Square Grid einzuschlagen, muss ein weiterer Weg aufgewendet werden, da nach dem \textit{Satz des Pythagoras} gilt:
 \begin{equation}
     a^2 + b^2 = c^2
@@ -33,4 +33,14 @@ Möchte man also Bewegungen von Einheiten in 6 statt 4 Richtungen ermöglichen, 
         \includegraphics[width=300px]{0.bilder/hexgrid.png}
     \end{center}
     \caption{Aufbau eines Hex Grids (\cite{world:grids})} \label{image:hexgrid}
+\end{figure}
+
+\subsubsection{Generierung}
+Das Terrain beziehungsweise Grid wird über einen vielschichtigen Algorithmus generiert, welcher die gesamte Fläche in Columns und die Columns wiederum in Chunks unterteilt. Der Algorithmus wurde mittels eines im Internet gefundenen Tutorials \cite*[]{world:tutorial} erarbeitet und anschließend angepasst. Mittels der Methode \textit{GenerateMap} (vgl. \autoref{image:codeworldgeneration}) kann von außerhalb dann der Algorithmus verwendet werden. Es gibt etliche Variationen zur Anpassung, darunter ein Seed, welcher die Generierung beeinflusst, Meeresspiegel, Erosion, Feuchtigkeit und Temperatur, es ist damit viel Diversität zwischen verschiedener Karten gegeben.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=200px]{0.bilder/codeworldgeneration.png}
+    \end{center}
+    \caption{Methode zur Generierung der Welt} \label{image:codeworldgeneration}
 \end{figure}
