--- a/4.prototype/4.7.mechaniken.tex
+++ b/4.prototype/4.7.mechaniken.tex
@@ -2,7 +2,16 @@
 Es wurden nun in \textit{Sektion 2} und \textit{Sektion 3} einige Mechaniken und Eigenheiten von älteren und neu erschienen Management Games untersucht und Hypothesen dazu angeführt. Diese Hypothesen und Mechaniken, welche sich als besonders interessant und nutzerfreundlich erweisen, werden nun unter Berücksichtigung der in \textit{Sektion 4.1} erörterten Vorgänge innerhalb einer Bienenkolonie konkretisiert und ausgefeilt. Außerdem werden die in \textit{Sektion 1} definierten Eigenschaften eines Resource Management Games berücksichtigt und versucht, die untersuchten Gegebenheiten (Ressourcen, Ökonomie, Informationsgehalt und Verwaltungsaspekte) möglichst sinnvoll mit den Vorgängen einer Bienenkolonie zu kombinieren, um daraus ein Spiel zu gestalten, welches sehr stark an die echten Vorgänge einer solchen angelehnt ist. Im folgende referenzierte Hypothesen aus \autoref{table:hypotheses} werden mit [HX] abgekürzt, wobei X für die jeweilige Nummer der Hypothese steht.
 
 \subsubsection{Anweisungsstil}
-Wie sich in den Interviews und der Analyse von RimWorld gezeigt hat, lassen sich die Art, auf welche Anweisungen an die jeweiligen Einheiten erteilt werden, in \textit{direktes} und \textit{indirektes} Anweisen beziehungsweise Zuweisen. Während in den bereits vorgestellten Titeln meistens auf eine direkte Anweisung der Einheiten zurückgegriffen wird, stellt RimWorld eine Neuerung dar, welche laut [H15] für das Genre des Colony Managements als durchaus positiv von den Probanden aufgefasst wird. Daher wird dieser Anweisungsstil, mitsamt der Prioritätenliste [H13], welche mittels Grafiken verständlicher gemacht wird [H14].
+Wie sich in den Interviews und der Analyse von RimWorld gezeigt hat, lassen sich die Art, auf welche Anweisungen an die jeweiligen Einheiten erteilt werden, in \textit{direktes} und \textit{indirektes} Anweisen beziehungsweise Zuweisen. Während in den bereits vorgestellten Titeln meistens auf eine direkte Anweisung der Einheiten zurückgegriffen wird, stellt RimWorld eine Neuerung dar, welche laut [H15] für das Genre des Colony Managements als durchaus positiv von den Probanden aufgefasst wird. Daher wird dieser Anweisungsstil, mitsamt der Prioritätenliste [H13], welche mittels Grafiken verständlicher gemacht wird [H14]. Diese Grafiken finden sich in \autoref{image:prioritylist} wieder. Es gibt fünf verschiedene Prioritätszustände pro Tätigkeitsbereich pro Biene. Falls die Biene aufgrund ihrer Kaste oder ihres Alters eine bestimmte Tätigkeit nicht machen kann, ist der Button nicht vorhanden. Ansonsten gilt, dass ein grüner Pfeil nach oben bedeutet \textit{Hohe Priorität}, ein gelber Strich bedeutet \textit{Mittlere Priorität}, ein roter Pfeil nach unten bedeutet \textit{Niedrige Priorität}. Falls keine Grafik in dem Button angezeigt wird, steht dies für \textit{Untätig}, womit der Spieler auch entscheiden kann, dass manche Bienen bestimmte Tätigkeiten nicht erledigen, selbst wenn möglich.
+
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=200px]{0.bilder/prioritylist.png}
+    \end{center}
+    \caption{Fertig implementierte Prioritätenliste} \label{image:prioritylist}
+\end{figure}
+
+
 
 \subsubsection{Ressourcen}
 Die im Spiel vorhandenen Ressourcen sind in \autoref{table:resources} aufgelistet. Die Gründe für die Auswahl der Ressourcen sind \textit{Sektion 4.1.1} zu finden. \textit{Honigtau} wird nicht als Ressource implementiert, da diese von lebenden Tieren extrahiert wird, und aufgrund von weiteren benötigten Modellen und Animationen keine weiteren Tiere neben den eigentlichen Bienen implementiert werden. Um das Spiel spannender und etwas komplexer zu gestalten werden verschiedene \textit{Sources}, \textit{Converter} und \textit{Drains} (vgl. \textit{Sektion 1.1.2}) verwendet. Alle involvierten Ressourcen, wie auch baubare Waben, sind in \autoref{image:resourceloop} skizziert. Die Zahlen sind dabei rein experimentell und müssen im Verlauf der Tests gegebenenfalls angepasst werden.
@@ -50,7 +59,7 @@ Diese greifbaren Ressourcen sind das Fundament des Spiels, wobei neue Bienen, an
 \end{figure}
 
 \subsubsection{Jahreszeiten}
-Es gibt vier verschiedene Jahreszeiten, \textit{Frühling, Sommer, Herbst} und \textit{Winter}. Alle 30 Tage wechselt die Jahreszeit zur jeweils nächsten. Jede Jahreszeit ist dabei anders und bietet andere, mögliche Events. Jegliche Angaben von Chancen sind dabei rein experimentell und müssen im späteren Verlauf getestet werden.
+Es gibt vier verschiedene Jahreszeiten, \textit{Frühling, Sommer, Herbst} und \textit{Winter}. Alle 30 Tage wechselt die Jahreszeit zur jeweils nächsten. Jede Jahreszeit ist dabei anders und bietet andere, mögliche Events. Jegliche Angaben von Chancen sind dabei rein experimentell und müssen im späteren Verlauf getestet werden. Im Prototypen werden aufgrund der niedrigen Zeitspanne keine Events implementiert sein, jedoch bereits konzipiert für die spätere Implementation.
 
 \paragraph{Frühling} ist die Zeit, in welcher neue Blumen sprießen. Es gibt ein besonderes Event namens \textit{Pollenflug}, wobei besonders viele Blumen sprießen, was es dem Spieler durchaus erleichtern kann, neue Nahrung zu beschaffen. Das Event hat eine Chance von $\frac{1}{30}$ pro Tag zu passieren, und kann pro Jahr maximal ein Mal geschehen.
 
@@ -69,7 +78,7 @@ Es gibt vier verschiedene Jahreszeiten, \textit{Frühling, Sommer, Herbst} und \
 \end{figure}
 
 \subsubsection{Bienen}
-Die Bienen sind das Herzstück des Spiels und werden analog zu \textit{RimWorld} indirekt gesteuert. Eine Biene hat mehrere Eigenschaften. Sämtliche aufgelisteten Eigenschaften sind visuell dargestellt als Skizze in \autoref{image:beeinfodraw}.
+Die Bienen sind das Herzstück des Spiels und werden analog zu \textit{RimWorld} indirekt gesteuert. Eine Biene hat mehrere Eigenschaften. Sämtliche aufgelisteten Eigenschaften sind visuell dargestellt als Skizze beziehungsweise Mockup in \autoref{image:beeinfodraw}.
 
 \paragraph{Kasten}
 Es gibt analog zu einer realen Bienenkolonie drei verschiedene Kasten. Jede Biene besitzt eine Variable in Form einer Enum, welche angibt, ob es sich um eine Königin, eine Drohne oder eine Arbeitsbiene handelt. Aufgrund dieser Information werden etliche Entscheidungen getroffen, darunter das gezeigte Modell, wovon es drei verschiedene für jede Kaste gibt, die möglichen ausführbaren Aktionen und die Lebensdauer. Es können kastenspezifisch neue Bienen herangezogen werden. Wie auch in der realen Welt werden für die Arbeitsbienen befruchtete Eier benötigt, für die Königinnen befruchtete Eier und Royal Jelly, und für die Drohnen lediglich unbefruchtete Eier. Diese Mechanik ist in \autoref{image:reproductionloop} schematisch dargestellt.
@@ -81,6 +90,9 @@ Es gibt analog zu einer realen Bienenkolonie drei verschiedene Kasten. Jede Bien
     \caption{Reproduktionsverhalten der Bienen} \label{image:reproductionloop}
 \end{figure}
 
+\paragraph{Name}
+Jede Biene hat zur besseren Unterscheidung einen zufällig generierten Namen aus einer großen Variation verschiedenster Ethnien. Der Generator entstammt dem Unity Asset Store \cite*[]{asset:namegenerator}.
+
 \paragraph{Alter} 
 Das Alter der Biene ist von zentraler Bedeutung. Für die Königin ist es entscheidend einzuschätzen, wie lange diese noch lebt, für die Arbeitsbienen ist es wichtig zu erkennen, welche Arbeiten und Aufgaben diese übernehmen kann. Eine Biene am Ende ihres Lebens ist biologisch nicht mehr in der Lage, die neue Brut zu füttern, und dient lediglich dem Sammeln von Ressourcen.
 
@@ -89,16 +101,16 @@ Eine Biene hat das Bedürfnis nach Nahrung. Der Nahrungsbalken wird mit der Zeit
 
 \begin{center}
     Nektar > Honig > Pollen
-\end{center} Royal Jelly wird nicht von den Arbeitern angerührt und wird lediglich von der Königin verspeist, genau so wie für das Heranziehen neuer Königinnen zur Larve gegeben. Stetige Bewegung sorgt für schnelleren Hunger. Die Reihenfolge der Nahrung kann vom Spieler angepasst werden, wodurch mehr Entscheidungsfreiheit gegeben ist und mehr Taktik angewandt werden kann. So könnte ein Spieler möglichst viele Pollen sammeln und diese als primäre Nahrungsquelle nutzen. Natürlich müssen diese Mechaniken ausgiebig getestet werden, sodass verschiedene Strategien nicht zu unausgeglichen sind.
+\end{center} Royal Jelly wird nicht von den Arbeitern angerührt und wird lediglich von der Königin verspeist, genau so wie für das Heranziehen neuer Königinnen zur Larve gegeben. Stetige Bewegung sorgt für schnelleren Hunger. Die Reihenfolge der Nahrung kann vom Spieler angepasst werden, wodurch mehr Entscheidungsfreiheit gegeben ist und mehr Taktik angewandt werden kann. So könnte ein Spieler möglichst viele Pollen sammeln und diese als primäre Nahrungsquelle nutzen. Natürlich müssen diese Mechaniken ausgiebig getestet werden, sodass verschiedene Strategien nicht zu unausgeglichen sind. Diese Änderung, wie auch das Futtern oder Füttern, ist im gegebenen Prototypen nicht implementiert.
 
 \paragraph{Durst} 
-Bienen benötigen Flüssigkeit, genauer gesagt Wasser. Dieses wird nicht im Stock gelagert, sondern an Flüssen getrunken. Je mehr sich eine Biene bewegt, desto mehr Flüssigkeit benötigt diese. Sinkt dieser Wert auf 0, wird die Biene nach kurzer Zeit sterben.
+Bienen benötigen Flüssigkeit, genauer gesagt Wasser. Dieses wird nicht im Stock gelagert, sondern an Flüssen getrunken. Je mehr sich eine Biene bewegt, desto mehr Flüssigkeit benötigt diese. Sinkt dieser Wert auf 0, wird die Biene nach kurzer Zeit sterben. Die Funktionalität des Trinkens ist im Prototypen noch nicht implementiert, jedoch stirbt eine Biene an Durst, sobald der gegebene Wert auf 0 sinkt.
 
 \paragraph{Samen} 
-Diese Eigenschaft hat lediglich eine Königin, und gibt an, wie viel Samen der Drohnen noch vorhanden sind um neue und befruchtete Eier zu legen. Es ist wichtig darauf ein Auge zu haben, da ohne verfügbare Samen weder Arbeitsbienen, noch Königinnen herangezogen werden können.
+Diese Eigenschaft hat lediglich eine Königin, und gibt an, wie viel Samen der Drohnen noch vorhanden sind um neue und befruchtete Eier zu legen. Es ist wichtig darauf ein Auge zu haben, da ohne verfügbare Samen weder Arbeitsbienen, noch Königinnen herangezogen werden können. Die Aktion zieht aus dem Pool der vorhandenen in der Königin gespeicherten Samen einen Wert ab, sodass die Anzahl der Aktion durch diese nicht greifbare Ressource limitiert ist.
 
 \paragraph{Inventar} 
-Das Inventar besitzt jede Biene und zeigt an, was diese gerade trägt. Getragen werden können Nektar, Pollen, Honig, Royal Jelly und Bienenwachs. Es kann zeitgleich nur eine Art von etwas getragen werden, und die Menge richtet sich nach der Art des Getragenen. Die Ausnahme dabei stellen Pollen dar, welche in den \textit{Pollensäckchen} zeitgleich zu anderen Dingen getragen werden.
+Das Inventar besitzt jede Biene und zeigt an, was diese gerade trägt. Getragen werden können Nektar, Pollen, Honig, Royal Jelly und Bienenwachs. Die Menge richtet sich nach der Art des Getragenen. Das Inventar ist ein zentraler Punkt der Ressourcen, da Bienen für Aktionen in den meisten Fällen die benötigte Ressource erst aus dem Lager holen müssen, falls nicht bereits im Inventar vorhanden, und dann diese nicht greifbaren Ressourcen weiterverwenden mittels Converter.
 
 \paragraph{Auftrag} 
 Der momentane Auftrag ist ebenfalls Teil der Biene. Dieser zeigt dem Nutzer, was diese Biene gerade vorhat und wieso sie sich zu der bestimmten Stelle bewegt.
@@ -124,10 +136,10 @@ Die genetischen Eigenschaften beziehungsweise \textit{Traits} sind immer exakt d
     \item Gesegnet: $\frac{1}{3} \times \frac{1}{2} = \frac{1}{6}$
     \item Verflucht: $\frac{1}{3} \times \frac{1}{2} = \frac{1}{6}$
     \item Verdampfer: $\frac{1}{3} \times \frac{1}{2} = \frac{1}{6}$
-\end{itemize} Die Traits, welche speziell auf eine gewisse Art von Kaste gelten, werden im Hintergrund gespeichert und es wird ein neuer Trait gezogen. Dieser wird sich vorgemerkt. Sollte die Arbeitsbienenlarve also zur Königin herangezogen werden, wird der vorgemerkte Trait durch den Erstgezogenen ersetzt.
+\end{itemize} Die Traits, welche speziell auf eine gewisse Art von Kaste gelten, werden im Hintergrund gespeichert und es wird ein neuer Trait gezogen. Dieser wird sich vorgemerkt. Sollte die Arbeitsbienenlarve also zur Königin herangezogen werden, wird der vorgemerkte Trait durch den Erstgezogenen ersetzt. Die Traits sind bereits namentlich implementiert, es werden drei bei der Geburt der Biene zugewiesen. Allerdings haben diese im Prototypen noch keine weiteren Effekte und keine passenden Grafiken. Auch werden die Traits noch nicht genetisch vererbt, sondern zufällig gezogen, was sich im Laufe der Entwicklung noch ändern wird.
 
 \paragraph{Mutation}
-Damit eine Diversität entstehen kann, und nicht stetig die gleichen Traits in der Kolonie weitervererbt werden, bedarf es der Möglichkeit einer Mutation. Es besteht eine geringe Chance, dass \textit{nach dem Ziehen} eines vererbten Traits, dieser Trait durch einen völlig anderen ersetzt wird.
+Damit eine Diversität entstehen kann, und nicht stetig die gleichen Traits in der Kolonie weitervererbt werden, bedarf es der Möglichkeit einer Mutation. Es besteht eine geringe Chance, dass \textit{nach dem Ziehen} eines vererbten Traits, dieser Trait durch einen völlig anderen ersetzt wird. Diese Mechanik ist in dem Prototypen noch nicht gegeben.
 % Please add the following required packages to your document preamble:
 % \usepackage{graphicx}
 \begin{table}[]
@@ -154,7 +166,7 @@ Damit eine Diversität entstehen kann, und nicht stetig die gleichen Traits in d
 
 
 \subsubsection{Aktionen}
-Es gibt 6 verschiedene, vom Spieler ausführbare, Anordnungen. Diese werden verwendet, um die Bienen indirekt zu steuern und den Stock somit möglichst am Leben zu erhalten.
+Es gibt 6 verschiedene, vom Spieler ausführbare, Anordnungen. Diese werden verwendet, um die Bienen indirekt zu steuern und den Stock somit möglichst am Leben zu erhalten. Von den Aktionen sind im Prototyp das Sammeln, das Bestäuben, das Eier legen und das Abbrechen funktional. 
 
 \paragraph{Sammeln} wird verwendet, um von den in der Spielwelt vorhandenen Blumen den Nektar und die Pollen zu extrahieren. Diese Aktion ist lediglich von Arbeitsbienen im späten Alter ausführbar.
 
