Changed whole structure, added several small things too

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -444,3 +444,15 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://assetstore.unity.com/packages/tools/input-management/random-generator-118768},
   urldate={2022-09-15},
 }
+ @book{ries_2017, 
+  place={New York}, 
+  title={The Lean Startup: How Today's entrepreneurs use continuous innovation to create radically successful businesses}, 
+  publisher={Currency}, 
+  author={Ries, Eric}, 
+  year={2017}
+ } 
+@online{repository,
+  title={Repository des Prototyp},
+  url={https://github.com/ProgFroz/hexabees},
+  urldate={2022-09-18},
+}
