--- a/0.cover/cover.tex
+++ b/0.cover/cover.tex
@@ -14,7 +14,7 @@
 % Titel
 \begin{center}
 	{\Huge \bfseries Bachelorarbeit} \\[12pt]
-	{\huge Design und Implementierung eines Resource-Management-Games} \\[24pt]
+	{\huge Design und Implementierung eines Resource Management Games} \\[24pt]
 	{\Large \bfseries Justin Nicola}
 \end{center}
 
