--- a/1.einleitung/1.0.einleitung.tex
+++ b/1.einleitung/1.0.einleitung.tex
@@ -1,4 +1,4 @@
 
-Bereits seit dem Jahr 1964 existieren Ressource Management Games. Das erste verzeichnete Spiel trägt dem Titel \glqq The Sumerian Game\grqq, wurde entwickelt von Mabel Addis und spielt in dem antiken sumerischen Stadtstaat Lagash. Die Aufgabe des Spielers war es, in drei verschiedenen Segmenten mit jeweils eigenen Runden, die Bevölkerung und die Ressourcen so anzuordnen, dass ein erfolgreiches Überleben der Einwohner gesichert ist, trotz zufälliger Katastrophen oder Events. Seitdem hat sich in der Branche des Game Developments und der Kategorie der Resource Management Games einiges getan, von SimCity über Anno, bis hin zu RimWorld oder Factorio. Es gibt verschiedenste Unterkategorien von Resource Management Games, welche alle eigene Siegbedingungen, Tücken und Eigenschaften besitzen, wie auch typische UI-Elemente und -Anordnungen. Die Branche ist erfolgreicher denn je und erfreut sich stetigem Wachstum, doch die Frage ist, in welche Richtung werden sich Resource Management Games entwickeln? Gibt es zurzeit Optimierungsbedarf an bestimmten Stellen? Was hält den Spieler dazu an, weiter das Spiel zu spielen, und wie kann man den Spaß optimieren? Was sind gängige Ressourcen, und was eher untypische? Gibt es eine (bisher) minimale und maximale Komplexität?
+EINLEITUNG SCHREIBEN
 
-\input{1.einleitung/1.1.definition.tex}
+\input{1.einleitung/1.1.geschichte.tex}
