--- a/main.tex
+++ b/main.tex
@@ -22,14 +22,23 @@
 \section{Einleitung}
 \input{1.einleitung/1.0.einleitung.tex}
 
+\section{Motivation}
+\input{2.motivation/2.0.motivation.tex}
+
+\section{Definition}
+\input{3.definition/3.0.definition.tex}
+
 \section{Beispiele}
-\input{2.beispiele/2.0.beispiele.tex}
+\input{4.beispiele/4.0.beispiele.tex}
 
 \section{Analyse}
-\input{3.analyse/3.0.analyse.tex}
+\input{5.analyse/5.0.analyse.tex}
 
 \section{Prototyp}
-\input{4.prototype/4.0.prototype.tex}
+\input{6.prototype/6.0.prototype.tex}
+
+\section{Fazit}
+\input{7.fazit/7.0.fazit.tex}
 
 \newpage
 \printbibliography
