Added style, minted code and statement

--- a/0.settings/commands.tex
+++ b/0.settings/commands.tex
@@ -1,1 +1,6 @@
 \newcommand{\newparagraph}[1]{\paragraph{#1}\mbox{}\\\\}
+\renewcommand{\listfigurename}{Abbildungsverzeichnis}
+\providecommand*{\listingautorefname}{Quellcode-Ausschnitt}
+
+\renewcommand{\listoflistingscaption}{Quellcodeverzeichnis}
+\renewcommand\listingscaption{Quellcode-Ausschnitt}
