--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[12pt]{extarticle}
 
 \input{0.settings/packages.tex}
 \input{0.settings/commands.tex}
@@ -13,9 +13,9 @@
 
 
 \include{0.cover/cover.tex}
+\include{0.pre/eidesstattliche.tex}
 
-
-\include{0.verzeichnisse/0.1.glossar.tex}
+\include{0.verzeichnisse/0.0.verzeichnisse.tex}
 
 
 \maketitle
