Added unit tests, fixed history, fixed section references

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -456,3 +456,42 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://github.com/ProgFroz/hexabees},
   urldate={2022-09-18},
 }
+@online{unittests,
+  title={Unit testing in video games},
+  url={https://www.gamedeveloper.com/programming/unit-testing-in-video-games},
+  urldate={2022-09-21},
+  author={Francois Guibert},
+  day={12},
+  month={June},
+  year={2017}
+}
+@online{sumeriangame,
+  title={THE SUMERIAN GAME: THE MOST IMPORTANT VIDEO GAME YOU’VE NEVER HEARD OF},
+  url={https://www.acriticalhit.com/sumerian-game-most-important-video-game-youve-never-heard/},
+  urldate={2022-09-21},
+  author={Critical Kate Willaert}
+}
+@online{rmgstatistics,
+  title={Resource Management Games – Steam Marketing Tool},
+  url={https://games-stats.com/steam/?tag=resource-management},
+  urldate={2022-09-21}
+}
+@online{whygameengine,
+  title={The What and Why of Game Engines},
+  url={https://medium.com/@jaredehalpern/the-what-and-why-of-game-engines-f2b89a46d01f#:~:text=Game%20engines%20provide%20tremendous%20efficiency,entirely%20on%20writing%20gameplay%20code.},
+  urldate={2022-09-21},
+  author={Jared Halpern},
+  day={11},
+  month={December},
+  year={2018}
+}
+@online{mostusedengines,
+  title={Most used Engines},
+  url={https://itch.io/game-development/engines/most-projects},
+  urldate={2022-09-21}
+}
+@online{unity,
+  title={Unity},
+  url={https://unity.com/},
+  urldate={2022-09-21}
+}
