--- a/6.prototype/6.2.engine.tex
+++ b/6.prototype/6.2.engine.tex
@@ -1,8 +1,2 @@
 \subsection{Spiel-Engine}
-Ein Videospiel wird heutzutage nicht mehr von Grund auf neu programmiert. Die Grundlage schafft in den meisten Fällen eine sogenannte \textit{Game Engine} (Spiele-Engine). Diese Engine bietet wichtige Grundlagen, welche es dem Entwickler oder dem Entwicklerteam deutlich vereinfachen loszulegen. Darunter fallen Grafik-, Physik- und Audiosysteme, welche je nach Engine variieren. Im Folgenden werden die drei größten Marktführer untersucht, verglichen und es wird anschließend in einem Fazit eine Entscheidung für eine dieser gefällt, welche für die Entwicklung des Prototypen verwendet wird.
-
-\subsubsection{Godot}
-
-\subsubsection{Unreal Engine}
-
-\subsubsection{Unity}
+Ein Videospiel wird heutzutage nicht mehr von Grund auf neu programmiert. Die Grundlage schafft in den meisten Fällen eine sogenannte \textit{Game Engine} (Spiele-Engine). Diese Engine bietet wichtige Grundlagen, welche es dem Entwickler oder dem Entwicklerteam deutlich vereinfachen loszulegen. Darunter fallen Grafik-, Physik- und Audiosysteme, welche je nach Engine variieren \cite*[]{whygameengine}. Aufgrund der sehr hohen Popularität \cite*[]{mostusedengines} und der bereits bestehenden Erfahrung wird bei dieser Arbeit auf \textit{Unity}\cite*[]{unity} zurückgegriffen. Mögliche und erwogene Alternativen waren \textit{Godot Engine} und \textit{Unreal Engine}, welche sich rein theoretisch allesamt anbieten würden. Auch wenn jede dieser Game Engines für den Umfang und die Komplexität des Prototypen geeignet wäre, überwiegt die vorhandene Erfahrung in Unity für die letztendliche Entscheidung.
