--- a/6.prototype/6.7.mechaniken.tex
+++ b/6.prototype/6.7.mechaniken.tex
@@ -1,5 +1,5 @@
 \subsection{Mechaniken}
-Es wurden nun in \textit{Sektion 2} und \textit{Sektion 3} einige Mechaniken und Eigenheiten von älteren und neu erschienen Management Games untersucht und Hypothesen dazu angeführt. Diese Hypothesen und Mechaniken, welche sich als besonders interessant und nutzerfreundlich erweisen, werden nun unter Berücksichtigung der in \textit{Sektion 4.1} erörterten Vorgänge innerhalb einer Bienenkolonie konkretisiert und ausgefeilt. Außerdem werden die in \textit{Sektion 1} definierten Eigenschaften eines Resource Management Games berücksichtigt und versucht, die untersuchten Gegebenheiten (Ressourcen, Ökonomie, Informationsgehalt und Verwaltungsaspekte) möglichst sinnvoll mit den Vorgängen einer Bienenkolonie zu kombinieren, um daraus ein Spiel zu gestalten, welches sehr stark an die echten Vorgänge einer solchen angelehnt ist. Im folgende referenzierte Hypothesen aus \autoref{table:hypotheses} werden mit [HX] abgekürzt, wobei X für die jeweilige Nummer der Hypothese steht.
+Es wurden in vorherigen Sektionen einige Mechaniken und Eigenheiten von älteren und neu erschienen Management Games untersucht und Hypothesen dazu angeführt. Diese Hypothesen und Mechaniken, welche sich als besonders interessant und nutzerfreundlich erweisen, werden nun unter Berücksichtigung der erörterten Vorgänge innerhalb einer Bienenkolonie konkretisiert und ausgefeilt. Außerdem werden die definierten Eigenschaften eines Resource Management Games berücksichtigt und versucht, die untersuchten Gegebenheiten (Ressourcen, Ökonomie, Informationsgehalt und Verwaltungsaspekte) möglichst sinnvoll mit den Vorgängen einer Bienenkolonie zu kombinieren, um daraus ein Spiel beziehungsweise Prototypen zu gestalten, welches sehr stark an die echten Vorgänge einer solchen angelehnt ist. Im folgende referenzierte Hypothesen aus \autoref{table:hypotheses} werden mit [HX] abgekürzt, wobei X für die jeweilige Nummer der Hypothese steht.
 
 \subsubsection{Anweisungsstil}
 Wie sich in den Interviews und der Analyse von RimWorld gezeigt hat, lassen sich die Art, auf welche Anweisungen an die jeweiligen Einheiten erteilt werden, in \textit{direktes} und \textit{indirektes} Anweisen beziehungsweise Zuweisen. Während in den bereits vorgestellten Titeln meistens auf eine direkte Anweisung der Einheiten zurückgegriffen wird, stellt RimWorld eine Neuerung dar, welche laut [H15] für das Genre des Colony Managements als durchaus positiv von den Probanden aufgefasst wird. Daher wird dieser Anweisungsstil, mitsamt der Prioritätenliste [H13], welche mittels Grafiken verständlicher gemacht wird [H14]. Diese Grafiken finden sich in \autoref{image:prioritylist} wieder. Es gibt fünf verschiedene Prioritätszustände pro Tätigkeitsbereich pro Biene. Falls die Biene aufgrund ihrer Kaste oder ihres Alters eine bestimmte Tätigkeit nicht machen kann, ist der Button nicht vorhanden. Ansonsten gilt, dass ein grüner Pfeil nach oben bedeutet \textit{Hohe Priorität}, ein gelber Strich bedeutet \textit{Mittlere Priorität}, ein roter Pfeil nach unten bedeutet \textit{Niedrige Priorität}. Falls keine Grafik in dem Button angezeigt wird, steht dies für \textit{Untätig}, womit der Spieler auch entscheiden kann, dass manche Bienen bestimmte Tätigkeiten nicht erledigen, selbst wenn möglich. Wird eine Aktion auf ein Feld angewiesen, wird eine \textit{JobOrder} erstellt, welche alle wichtigen Informationen enthält (vgl. \autoref{code:addjoborder}). Diese JobOrder wird in eine Liste hinzugefügt, welche jedes Frame iteriert wird, und geschaut, ob noch offene Anfragen vorhanden sind. Für jede offene Anfrage wird anhand einer Liste vieler Kriterien eine Biene aus der Liste aller vorhandenen adulten Bienen gesucht (vgl. \autoref{code:assignjobs}). Zuerst werden alle Bienen gesucht, welche keine Anfrage zugewiesen haben, theoretisch die Anfrage ausführen können und ausgewachsen sind. In einer zweiten Iteration werden die nun ausgesuchten Bienen auf Prioritäten geprüft, die Bienen mit der jeweils höchsten Priorität werden in einer Liste gespeichert. Zuletzt werden spezifische Informationen gesucht, wie etwa ein passendes Inventar für die Anfrage, beispielsweise genug Pollen für die Anfrage Pollinate. Letztendlich sollte von dieser dritten Liste die Biene mit dem kürzesten Pfad ausgewählt werden, wobei dieser letzte Schritt aus zeitlichen Gründen noch nicht im Prototyp vorhanden, aber algorithmisch durchaus möglich ist.
@@ -67,7 +67,7 @@ private void AssignJobs() {
 \end{listing}
 
 \subsubsection{Ressourcen}
-Die im Spiel vorhandenen Ressourcen sind in \autoref{table:resources} aufgelistet. Die Gründe für die Auswahl der Ressourcen sind \textit{Sektion 4.1.1} zu finden. \textit{Honigtau} wird nicht als Ressource implementiert, da diese von lebenden Tieren extrahiert wird, und aufgrund von weiteren benötigten Modellen und Animationen keine weiteren Tiere neben den eigentlichen Bienen implementiert werden. Um das Spiel spannender und etwas komplexer zu gestalten werden verschiedene \textit{Sources}, \textit{Converter} und \textit{Drains} (vgl. \textit{Sektion 1.1.2}) verwendet. Alle involvierten Ressourcen, wie auch baubare Waben, sind in \autoref{image:resourceloop} skizziert. Die Zahlen sind dabei rein experimentell und müssen im Verlauf der Tests gegebenenfalls angepasst werden.
+Die im Spiel vorhandenen Ressourcen sind in \autoref{table:resources} aufgelistet. Die Gründe für die Auswahl der Ressourcen sind \textit{Sektion 6.1.1 Nahrung} zu finden. \textit{Honigtau} wird nicht als Ressource implementiert, da diese von lebenden Tieren extrahiert wird, und aufgrund von weiteren benötigten Modellen und Animationen keine weiteren Tiere neben den eigentlichen Bienen implementiert werden. Um das Spiel spannender und etwas komplexer zu gestalten werden verschiedene \textit{Sources}, \textit{Converter} und \textit{Drains} (vgl. \textit{Sektion 1.1.2}) verwendet. Alle involvierten Ressourcen, wie auch baubare Waben, sind in \autoref{image:resourceloop} skizziert. Die Zahlen sind dabei rein experimentell und müssen im Verlauf der Tests gegebenenfalls angepasst werden.
 
 \begin{table}[]
     \centering
@@ -100,7 +100,7 @@ Eine weitere fundamentale Ressource ist das Gelée Royal oder auch \textit{Royal
 Die einzige nicht vom Spieler sammelbare oder lagerbare Ressource ist Wasser. Dieses müssen die Bienen durch Nahrung aufnehmen (Nektar besitzt mehr Wasser als Honig), oder über das Trinken an einem Fluss. Da im Winter keine Ausflüge gestattet sind, ist es wichtig, dass Bienen vor dem Winter genug Wasser zu sich nehmen, um nicht zu verdursten.
 
 \paragraph{Königin, Drohne und Arbeitsbiene}
-Diese greifbaren Ressourcen sind das Fundament des Spiels, wobei neue Bienen, analog zu \textit{Sektion 4.1.3}, Kasten-spezifisch herangezogen werden können, mehr dazu im folgenden Abschnitt.
+Diese greifbaren Ressourcen sind das Fundament des Spiels, wobei neue Bienen, analog zu \textit{Sektion 6.1.3 Fortpflanzung}, Kasten-spezifisch herangezogen werden können, mehr dazu im folgenden Abschnitt.
 
 \begin{figure}
     \begin{center}
@@ -128,8 +128,15 @@ Es gibt vier verschiedene Jahreszeiten, \textit{Frühling, Sommer, Herbst} und \
     \caption{Skizze des Informationsfensters einer ausgewählten Biene} \label{image:beeinfodraw}
 \end{figure}
 
+\begin{figure}
+    \begin{center}
+        \includegraphics[width=200px]{0.bilder/beeuml.png}
+    \end{center}
+    \caption{Simplifiziertes UML-Klassendiagramm der Bee.cs} \label{image:beeuml}
+\end{figure}
+
 \subsubsection{Bienen}
-Die Bienen sind das Herzstück des Spiels und werden analog zu \textit{RimWorld} indirekt gesteuert. Eine Biene hat mehrere Eigenschaften. Sämtliche aufgelisteten Eigenschaften sind visuell dargestellt als Skizze beziehungsweise Mockup in \autoref{image:beeinfodraw}.
+Die Bienen sind das Herzstück des Spiels und werden analog zu \textit{RimWorld} indirekt gesteuert. Eine Biene hat mehrere Eigenschaften. Sämtliche aufgelisteten Eigenschaften sind visuell dargestellt als Skizze beziehungsweise Mockup in \autoref{image:beeinfodraw}. Die Klasse der \textit{Bee} kann über das leicht vereinfachte UML-Klassendiagramm in \autoref{image:beeuml} eingesehen werden. In dem dargestellten UML-Diagramm sind einige Felder nicht gezeigt, da diese für äußere Zugriffe unwichtig sind. Außerdem sind die meisten vorhandenen Methoden nicht aufgelistet, da die Anzahl dieser das Diagramm aufblähen würden. Die gesamte Klasse umfasst einen Zeilenumfang von \textit{673 Zeilen}.
 
 \paragraph{Kasten}
 Es gibt analog zu einer realen Bienenkolonie drei verschiedene Kasten. Jede Biene besitzt eine Variable in Form einer Enum, welche angibt, ob es sich um eine Königin, eine Drohne oder eine Arbeitsbiene handelt. Aufgrund dieser Information werden etliche Entscheidungen getroffen, darunter das gezeigte Modell, wovon es drei verschiedene für jede Kaste gibt, die möglichen ausführbaren Aktionen und die Lebensdauer. Es können kastenspezifisch neue Bienen herangezogen werden. Wie auch in der realen Welt werden für die Arbeitsbienen befruchtete Eier benötigt, für die Königinnen befruchtete Eier und Royal Jelly, und für die Drohnen lediglich unbefruchtete Eier. Diese Mechanik ist in \autoref{image:reproductionloop} schematisch dargestellt.
@@ -254,7 +261,7 @@ Es gibt, analog zu den Aktionen, 6 verschiedene, baubare Strukturen. Diese diene
 \end{figure}
 
 \subsubsection{Brutvorgang}
-Um neue Bienen herzustellen werden, wie bereits zuvor erläutert und in \autoref{image:reproductionloop} erkennbar, verschiedene Bienen für verschiedene Resultate benötigt. Wird ein Ei in eine Brutkammer gelegt, beginnt ab diesem Zeitpunkt die Metamorphose, analog zu den In \textit{Sektion 4.1.4} erläuterten Vorgängen. Das gelegte Ei wird nach einer gegebenen Zeit zu einer Larve, danach zu einer Puppe und anschließend zu einer voll ausgewachsenen Biene. Die Modelle einer einzelnen Einheit sind in \autoref{image:metamorphosisimplemented} zu erkennen.
+Um neue Bienen herzustellen werden, wie bereits zuvor erläutert und in \autoref{image:reproductionloop} erkennbar, verschiedene Bienen für verschiedene Resultate benötigt. Wird ein Ei in eine Brutkammer gelegt, beginnt ab diesem Zeitpunkt die Metamorphose, analog zu den in \textit{Sektion 6.1.4 Metamorphose} erläuterten Vorgängen. Das gelegte Ei wird nach einer gegebenen Zeit zu einer Larve, danach zu einer Puppe und anschließend zu einer voll ausgewachsenen Biene. Die Modelle einer einzelnen Einheit sind in \autoref{image:metamorphosisimplemented} zu erkennen.
 
 \paragraph{Stadium 1: Ei} Das Ei liegt nach dem Legen in der Brutwabe. Zu diesem Stadium ist lediglich erkennbar, ob befruchtet oder unbefruchtet. Die Wabe muss ein Mal mit Nahrung, vorzugsweise Nektar oder Honig, gefüllt werden, damit das Ei überlebt. Nach einigen Tagen schlüpft daraus eine Larve und die Nahrung in der Brutwabe ist verbraucht.
 
